deploy/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-express
  template:
    metadata:
      labels:
        app: backend-express
    spec:
      containers:
      - name: backend-express
        image: kfivap-node-test-app
        ports:
        - containerPort: 5000
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: backend-express-service
spec:
  selector:
    app: backend-express
  ports:
    - port: 5000 #expose
      targetPort: 5000 #container
      protocol: TCP
