deploy/mongo-stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  serviceName: "mongodb"
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:4.4.10
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: postgres-volume
      volumes:
        - name: postgres-volume
          hostPath:
            path: /data/db
            type: DirectoryOrCreate
---
kind: Service
apiVersion: v1
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
      name: tcp-mongodb
